fix back-to-top button z-index

--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -403,7 +403,7 @@
     position: fixed;
     bottom: 30px;
     right: 30px;
-    z-index: 999;
+    z-index: 90;
 
     width: 50px;
     height: 50px;
